DEV: proyecto, vistas 3 vistas

--- a/templates/tienda/consolas.html
+++ b/templates/tienda/consolas.html
@@ -20,41 +20,39 @@
 
     <!-- JS Y CSS -->
     <script type="text/javascript" src="{% static 'js/index.js' %}"></script>    
-	<link rel="stylesheet" type="text/css" href="{% static 'css/index.css' %}">      
+    <link rel="stylesheet" type="text/css" href="{% static 'css/index.css' %}">      	   
 	
-	<title>PROYECTO TIENDA - CATALOGO PRODUCTOS</title>
+	<title>TIENDA - CONSOLAS</title>
 </head>
 <body>
 	<head>
+
+		<div class="row">
+			<div class="col s12" style="background-color: black;">
+				<img style="margin:none; height: 150px;" src="{% static 'images/head1.jpg' %}"/>
+			</div>
+		</div>	
 		<nav class="nav-extended">
-    		<div class="nav-wrapper black">
-      			<a href="/index" class="brand-logo"><i class="large material-icons left">store</i>Proyecto TIENDA - Django</a>
+    		<div class="nav-wrapper blue">
+      			<a href="/index" class="brand-logo"><i class="large material-icons left">store</i>TIENDA - CONSOLAS</a>
       			<ul id="nav-mobile" class="right hide-on-med-and-down">        		      
-			        <li><a href="productos"><i class="large material-icons left">videogame_asset</i>Productos</a></li>
-			        <li><a href="categorias"><i class="medium material-icons left">gamepad</i>Categorias</a></li>
+			        <li><a href="consolas"><i class="large material-icons left">videogame_asset</i>Consolas</a></li>
+			        <li><a href="juegos"><i class="large material-icons left">gamepad</i>Video juegos</a></li>
+			        <li><a href="accesorios"><i class="medium material-icons left">local_activity</i>Accesorios</a></li>
 			        <li><a href="ventas"><i class="material-icons left">shopping_cart</i>Carrito</a></li>			        
       			</ul>
     		</div>
   		</nav>
 	</head>
 
-	<main>	
-
-		
-		
-
-
-
-			
-
-		
+	<main class="consolasmain">		
 
 	</main>
 
 	 <footer class="page-footer white">          
           <div class="footer-copyright">
             <div class="container">
-            	<a class="black-text text-lighten-4 left" href="#!">©Roberto Abad Ramírez Nieves exp.24662</a>
+            	<a class="black-text text-lighten-4 left" href="#!">©Roberto Abad Ramírez Nieves exp.24662      TIENDA - CONSOLAS</a>
             	<a class="black-text text-lighten-4 right" href="#!">Taller DJANGO</a>
             </div>
           </div>
