--- a/templates/base/consolas.css
+++ b/templates/base/consolas.css
@@ -1,7 +1,7 @@
-main{
+.consolasmain{
 	flex: 1 0 auto;
 	margin: 0px;
-	background-image: url('https://www.androidguys.com/wp-content/uploads/2016/02/vzRN4in.jpg');
+	background-image: url('http://i.imgur.com/k9RynUE.png');
 	background-repeat: no-repeat;
     background-size: 100% 100%;
 }
@@ -12,4 +12,3 @@ body {
 	flex-direction: column;
 	background-color: black;	
 }
-
