--- a/templates/base/index.html
+++ b/templates/base/index.html
@@ -2,11 +2,6 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<!-- <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.css' %}">
-	<link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.min.css' %}">
-	<script type="text/javascript" src="{% static 'js/bootstrap.min.js' %}"></script>
-	<script type="text/javascript" src="{% static 'js/bootstrap.js' %}"></script>
-	<script type="text/javascript" src="{% static 'js/jquery-3.3.1.min.js' %}"></script> -->
 
 	<!-- JQUERY -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>       
@@ -36,9 +31,8 @@
     		<div class="nav-wrapper black">
       			<a href="/index" class="brand-logo"><i class="large material-icons left">store</i>Proyecto TIENDA - Django</a>
       			<ul id="nav-mobile" class="right hide-on-med-and-down">        		      
-			        <li><a href="consolas"><i class="large material-icons left">videogame_asset</i>Consolas</a></li>
-			        <li><a href="juegos"><i class="large material-icons left">gamepad</i>Video juegos</a></li>
-			        <li><a href="accesorios"><i class="medium material-icons left">local_activity</i>Accesorios</a></li>
+			        <li><a href="productos"><i class="large material-icons left">videogame_asset</i>Productos</a></li>
+			        <li><a href="categorias"><i class="large material-icons left">bookmark</i>Categorias</a></li>			        
 			        <li><a href="ventas"><i class="material-icons left">shopping_cart</i>Carrito</a></li>			        
       			</ul>
     		</div>
@@ -54,25 +48,25 @@
 		<div class="container alignVert">
 				<div class="row center">
 
-			      <div class="col s4">			        
-			        <li><a href="consolas"><i class="large material-icons">videogame_asset</i>
+			      <div class="col m4">			        
+			        <li><a href="productos"><i class="large material-icons">videogame_asset</i>
 			        <div class="card-action center hoverable blue">
-							<p style="color: white;">Tenemos las consolas mas nuevas de videojuegos para ti desde PS4,XboxOne,Nintendo Switch y más!.</p>
-							<a style="color: white;" href="consolas">     ¡VE AHORA!  -></a>
+							<!-- <p style="color: white;">Tenemos las consolas mas nuevas de videojuegos para ti desde PS4,XboxOne,Nintendo Switch y más!.</p> -->
+							<a style="color: white;" href="productos">     ¡VER PRODUCTOS! -></a>
 					</div>
 			      </div>
-			      <div class="col s4">			        
-			        <li><a href="juegos"><i class="large material-icons">apps</i>
+			      <div class="col m4">			        
+			        <li><a href="categorias"><i class="large material-icons">apps</i>
 			        <div class="card-action center hoverable blue">
-							<p style="color: white;">Mira nuestro catalogo de juegos con lo mas nuevo, ediciones especiales y preventas. Disponibles para todas las consolas.</p>
-							<a style="color: white;" href="juegos">    IR AL CATALOGO  -></a>
+							<!-- <p style="color: white;">Mira nuestro catalogo de juegos con lo mas nuevo, ediciones especiales y preventas. Disponibles para todas las consolas.</p> -->
+							<a style="color: white;" href="categorias">    ¡VER CATEGORIAS!  -></a>
 					</div>
 			      </div>
-			      <div class="col s4">			        
-			        <li><a href="accesorios"><i class="large material-icons">attach_money</i>
+			      <div class="col m4">			        
+			        <li><a href="ventas"><i class="large material-icons">attach_money</i>
 			        <div class="card-action center hoverable blue">
-							<p style="color: white;">Accesorios, extras, widgets y mas para tu consola y videojuegos favoritos. Disponibilidad para todas las consolas.</p>
-							<a style="color: white;" href="accesorios">     COMPRAR AHORA!  -></a>
+							<!-- <p style="color: white;">Accesorios, extras, widgets y mas para tu consola y videojuegos favoritos. Disponibilidad para todas las consolas.</p> -->
+							<a style="color: white;" href="ventas">     ¡COMPRAR AHORA!  -></a>
 					</div>
 			    </div>
 		    </div>
@@ -81,7 +75,7 @@
 		
 
 
-		<div class="container alignVert">
+		<!-- <div class="container alignVert">
 				<div class="row center">
 					<div class="col s12 m5">
 						<div class="card hoverable">
@@ -125,7 +119,7 @@
 							</div>					
 				</div>
 			</div>
-		</div>
+		</div> -->
 		
 
 
