--- a/templates/tienda/productos.html
+++ b/templates/tienda/productos.html
@@ -71,9 +71,9 @@
 				<td>
 				{% if Producto.Existencias > 0 %}
 				
-					<a class="waves-effect waves-light btn-small"><i class="material-icons ">add_shopping_cart</i></a>				
+					<a class="waves-effect waves-light btn-small" href="{% url 'productos:adlCarrito' Producto.id_Prod %}"><i class="material-icons ">add_shopping_cart</i></a>				
 				{% else %}
-					<a class="waves-effect waves-light btn-small disabled"><i class="material-icons left">add_shopping_cart</i></a>
+					<a class="waves-effect waves-light btn-small disabled" ><i class="material-icons left">add_shopping_cart</i></a>
 				{% endif %}
 					<a class="waves-effect waves-light btn-small red modal-trigger" href="{% url 'productos:producto_eliminar' Producto.id_Prod %}"><i class="material-icons ">clear</i></a>
 					<a class="waves-effect waves-light btn-small green" href="{% url 'productos:producto_editar' Producto.id_Prod %}" id="btnEditar"><i class="material-icons ">edit</i></a>
@@ -95,189 +95,11 @@
 	 <footer class="page-footer white">          
           <div class="footer-copyright">
             <div class="container">
-            	<a class="black-text text-lighten-4 left" href="#!">©Roberto Abad Ramírez Nieves exp.24662      TIENDA - CONSOLAS</a>
+            	<a class="black-text text-lighten-4 left" href="#!">©Roberto Abad Ramírez Nieves exp.24662      TIENDA - PRODUCTOS</a>
             	<a class="black-text text-lighten-4 right" href="#!">Taller DJANGO</a>
             </div>
           </div>
-      </footer>
-
-      <!-- MODALS -->
-      <!-- 
-      modalnewProduct
-      modaleditProduct
-      modalDeletProduct
-       -->
-
-       
-
-     <div class="modal" tabindex="-1" role="dialog" id="modalnewProduct">
-     	<!-- <form action="{% url 'productos:altaProducto'" method="post"> -->
-     		<form method="post">
-     		{% csrf_token %}
-			{{ form.as_p }}
-    		<div class="modal-dialog modal-lg" role="document">
-		    <div class="modal-content">
-		      <div class="modal-header">
-		        <h5 class="modal-title"><i class="material-icons left">videogame_asset</i>Nuevo Producto</h5>		       
-		      </div>
-		      <div class="modal-body">		      	
-			      	<div class="row">
-				    	<div class="col s6">
-			    			<div class="form-group">
-			    				<label for="Nombre">Nombre del producto</label>
-			    				<input type="text" class="form-control" id="Nombre" name="Nombre">
-			    			</div>
-			    		</div>
-			    		<div class="col s3">
-			      			<div class="form-group">
-			      				<p>
-								   <label>CATEGORIA DE PRODUCTO: </label>
-								</p>
-			      				<p>
-								   <label>
-								     <input class="with-gap" name="CatId" type="radio" value="1" />
-								     <span>Video juego</span>
-								   </label>
-								   <label>
-								     <input class="with-gap" name="CatId" type="radio" value="2" />
-								     <span>Consola</span>
-								   </label>
-								   <label>
-								     <input class="with-gap" name="CatId" type="radio" value="3" />
-								     <span>Accesorio</span>
-								   </label>
-								   <label>
-								     <input class="with-gap" name="CatId" type="radio" value="4" />
-								     <span>Otros</span>
-								   </label>
-								</p>
-			      			</div>
-			      		</div>	
-			    			    			    		
-			      	</div>
-			      	<div class="row">
-			      		<div class="col s6">
-			    			<div class="form-group">
-			    				<label for="Descripcion">Descripcion</label>
-			    				<input type="text" class="form-control" id="Descripcion" name="Descripcion">
-			    			</div>
-			    		</div>
-			    		<div class="col s3">
-			      			<div class="form-group">
-			      				<label for="Precio">Precio</label>
-			      				<input type="number" class="form-control" id="Precio" name="Precio">
-			      			</div>
-			      		</div>			    			    		
-			      		<div class="col s3">
-			      			<div class="form-group">
-			      				<label for="Existencias">Existencias</label>
-			      				<input type="number" class="form-control" id="Existencias" name="Existencias">
-			      			</div>
-			      		</div>		
-			    	</div>
-			      	<br>	      	
-		      </div>
-		      <div class="modal-footer">
-		        <button type="button" class="btn modal-close" data-dismiss="modal"><i class="material-icons left">clear</i>Cerrar</button>
-		        <a data-toggle="modal" class="btn btn-success"  type="submit" value="Save" id="addNewProduct" href="altaProducto"><i class="material-icons left">save</i>Guardar</a>
-		      </div>
-		    </div>
-		  </div> 		
-     	</form>		  
-	</div>
-
-
-       <div class="modal" tabindex="-1" role="dialog" id="modalDeletProduct">
-		  <div class="modal-dialog" role="document">
-		    <div class="modal-content">
-		      <div class="modal-header">
-		        <h5 class="modal-title"><i class="material-icons left">clear</i>Eliminar producto</h5>		        
-		      </div>
-		      <div>
-		      	<input type="number" class="form-control" id="idclearProduct" hidden="true">
-		      </div>
-		      <div class="modal-body">
-		        <p>¿Desea eliminar este producto?</p>
-		      </div>
-		      <div class="modal-footer">
-		         <button type="button" class="btn modal-close" data-dismiss="modal"><i class="material-icons left">cancel</i>Cancelar</button>
-		        <button type="button" data-toggle="modal" class="btn btn-success" id="addNewProduct"><i class="material-icons left">clear</i>Eliminar</button>
-		      </div>
-		    </div>
-		  </div>
-		</div>
-
-		<div class="modal" tabindex="-1" role="dialog" id="modaleditProduct">
-		  <div class="modal-dialog modal-lg" role="document">
-		    <div class="modal-content">
-		      <div class="modal-header">
-		        <h5 class="modal-title"><i class="material-icons left">edit</i>Editar Producto</h5>		       
-		      </div>
-		      <div class="modal-body">		      	
-			      	<div class="row">
-				    	<div class="col s6">
-			    			<div class="form-group">
-			    				<label for="nombre">Nombre del producto</label>
-			    				<input type="text" class="form-control" id="nombre" name="nombre">
-			    			</div>
-			    		</div>
-			    		<div class="col s3">
-			      			<div class="form-group">
-			      				<p>
-								   <label>CATEGORIA DE PRODUCTO: </label>
-								</p>
-			      				<p>
-								   <label>
-								     <input class="with-gap" name="group1" type="radio" value="1" />
-								     <span>Video juego</span>
-								   </label>
-								   <label>
-								     <input class="with-gap" name="group1" type="radio" value="2" />
-								     <span>Consola</span>
-								   </label>
-								   <label>
-								     <input class="with-gap" name="group1" type="radio" value="3" />
-								     <span>Accesorio</span>
-								   </label>
-								   <label>
-								     <input class="with-gap" name="group1" type="radio" value="4" />
-								     <span>Otros</span>
-								   </label>
-								</p>
-			      			</div>
-			      		</div>	
-			    			    			    		
-			      	</div>
-			      	<div class="row">
-			      		<div class="col s6">
-			    			<div class="form-group">
-			    				<label for="descripcion">Descripcion</label>
-			    				<input type="text" class="form-control" id="descripcion" name="descripcion">
-			    			</div>
-			    		</div>
-			    		<div class="col s3">
-			      			<div class="form-group">
-			      				<label for="Precio">Precio</label>
-			      				<input type="number" class="form-control" id="Precio" name="Precio">
-			      			</div>
-			      		</div>			    			    		
-			      		<div class="col s3">
-			      			<div class="form-group">
-			      				<label for="existencias">Existencias</label>
-			      				<input type="number" class="form-control" id="existencias" name="existencias">
-			      			</div>
-			      		</div>		
-			    	</div>
-			      	<br>	      	
-		      </div>
-		      <div class="modal-footer">
-		        <button type="button" class="btn modal-close" data-dismiss="modal"><i class="material-icons left">clear</i>Cerrar</button>
-		        <button type="button" data-toggle="modal" class="btn btn-success" id="addNewProduct"><i class="material-icons left">save</i>Guardar</button>
-		      </div>
-		    </div>
-		  </div>
-		</div>
-	
+      </footer>    
         
 </body>
 </html>
