--- a/templates/tienda/productos.html
+++ b/templates/tienda/productos.html
@@ -35,7 +35,7 @@
       			<a href="/index" class="brand-logo"><i class="large material-icons left">store</i>TIENDA - PRODUCTOS</a>
       			<ul id="nav-mobile" class="right hide-on-med-and-down">        				      				      
 			        <li><a class="modal-trigger" href="productos/productos_view"><i class="large material-icons left">add</i>Nuevo Producto</a></li>			
-			        <li><a class="modal-trigger" href="categorias"><i class="large material-icons left">bookmark</i>Categorias</a></li>        
+			        <li><a href="categorias"><i class="large material-icons left">bookmark</i>Categorias</a></li>        
 			        <li><a href="ventas"><i class="material-icons left">shopping_cart</i>Carrito</a></li>			        
       			</ul>
     		</div>
